package edu.group10.core.card;

public class DealBreakerCard extends ActionCard {
    public DealBreakerCard() {
        super("ACT_DEAL_BREAKER", "Deal Breaker", 5);
    }
}
