package edu.group10.core.card;

public class ForcedDealCard extends ActionCard {
    public ForcedDealCard() {
        super("ACT_FORCED_DEAL", "Forced Deal", 3);
    }
}
