package edu.group10.core.card;

public class SlyDealCard extends ActionCard {
    public SlyDealCard() {
        super("ACT_SLY_DEAL", "Sly Deal", 3);
    }
}
