package edu.group10.monopolydeal.backend.model.player;

/**
 * 玩家领域对象。
 */
public record Player(String id, String displayName, boolean bot) {
}
