@startuml
title Class Diagram for Monopoly Deal Game

' ========== Core Control Classes ==========
class Game <<Singleton>> {
  - instance: Game
  - players: List<Player>
  - currentPlayer: Player
  - deck: Deck
  - turnManager: TurnManager
  + getInstance(): Game
  + startGame(): void
  + nextTurn(): void
  + settleAction(action: ActionCard): void
  + handleFail(player: Player): void
  + checkWinCondition(): boolean
}

class TurnManager {
  - currentPlayerIndex: int
  + startTurn(): void
  + endTurn(): void
}

class GameFacade <<Facade>> {
  - game: Game
  - cardFactory: CardFactory
  + initGame(): void
  + playerDraw(): void
  + playerUseCard(card: Card): void
  + playerDiscard(card: Card): void
  + playerEndTurn(): void
}

' ========== Player Classes ==========
class Player implements Observer {
  - name: String
  - hand: List<Card>
  - propertyCards: List<PropertyCard>
  - moneyCards: List<MoneyCard>
  + drawCard(count: int): void
  + playCard(card: Card): void
  + discardCard(card: Card): void
  + payRent(amount: int): boolean
  + tradeWith(player: Player, give: Card, take: Card): void
  + hasMonopoly(color: String): boolean
  + update(event: String): void
}

interface Observer {
  + update(event: String): void
}

' ========== Card Hierarchy ==========
abstract class Card {
  - name: String
  - monetaryValue: int
  + getMonetaryValue(): int
  + {abstract} play(player: Player, game: Game): void
}

class PropertyCard {
  - color: String
  - rentValues: Map<int, int>
  + getRent(houses: int): int
  + isCompleteSet(): boolean
}

class MoneyCard {
  - value: int
  + getValue(): int
}

abstract class ActionCard <<Strategy>> {
  + {abstract} execute(player: Player, game: Game): void
}

class RentCard {
  - colors: List<String>
  + execute(player: Player, game: Game): void
}

class DealBreakerCard {
  + execute(player: Player, game: Game): void
}

class SlyDealCard {
  + execute(player: Player, game: Game): void
}

class ForcedDealCard {
  + execute(player: Player, game: Game): void
}

class JustSayNoCard {
  + execute(player: Player, game: Game): void
}

' ========== Helper Classes ==========
class Deck {
  - cards: Stack<Card>
  + shuffle(): void
  + draw(): Card
  + discard(card: Card): void
}

class CardFactory <<Factory>> {
  + createCard(type: String): Card
  + createFullDeck(): List<Card>
}

' ========== Relationships ==========
Game "1" -- "1" TurnManager
Game "1" -- "1" Deck
Game "1" -- "*" Player
Game "1" -- "*" Player : observes

GameFacade --> Game : uses
GameFacade --> CardFactory : uses

Player "1" -- "*" Card : hand
Player "1" -- "*" PropertyCard : owns
Player "1" -- "*" MoneyCard : owns

Deck "1" -- "*" Card : contains

Card <|-- PropertyCard
Card <|-- MoneyCard
Card <|-- ActionCard

ActionCard <|-- RentCard
ActionCard <|-- DealBreakerCard
ActionCard <|-- SlyDealCard
ActionCard <|-- ForcedDealCard
ActionCard <|-- JustSayNoCard

Player ..|> Observer

@enduml